--- a/src/App.css
+++ b/src/App.css
@@ -11,23 +11,11 @@
   z-index: 9999;
 
 }
-
-.container-fluid
-
-        .highlight {
-            padding: 0.5rem;
-            margin-right: 1.5rem;
-            margin-left: 0;
-            border-width: 1px;
-            border-top-left-radius: .25rem;
-            border-top-right-radius: .25rem;
-            margin-bottom: 25px;
-        }
-
-        .highlight > .centtro {
-            background-color: white;
-            padding-top: 20px;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-bottom: 20px;
-        }
+.wrap-text-content {
+  word-break: break-all;
+  overflow-wrap: break-word;
+}
+.text-wrap {
+  word-break: break-all;
+  overflow-wrap: break-word;
+}
